# Integrity_Control_Paillier

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_all.sh
scripts/: cli.py  create_visual_encrypted_obj.py  eval_distortion.py  eval_robustness.py  eval_robustness_noise.py  eval_robustness_noise_majority_vote.py  visualize_mesh.py
src/integrity_ctrl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/integrity_ctrl/crypto/: ecdsa_utils.py
src/integrity_ctrl/io/: mesh_utils.py
src/integrity_ctrl/util/: watermark_util.py
src/integrity_ctrl/watermarking/: base.py  dsb_signature.py  psb_watermarking.py  qim.py  sqim.py
tests/: test_01_mesh_io.py  test_02_phe_crypto.py  test_03_qim_clear.py  test_04_composite_qim.py  test_05_dsb_signature.py  test_06_psb_parity.py
utils/: paillier_context.py  test_mesh_io.py
watermarks/: dsb_signature.py  psb_scheme.py  qim.py  sqim.py  watermark.py
