[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integrity-ctrl"
version = "0.1.0"
description = "3D Model Watermarking and Integrity Control using Paillier and DSB."
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "ecdsa",
    "pymeshlab",
    "trimesh",
    "phe",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["src"]